<resources>
    <string name="app_name">kekodproject01</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="switch_ego">Ego</string>
    <string name="switch_1">switch 1</string>
    <string name="switch_2">switch 2</string>
    <string name="switch_3">switch 3</string>
    <string name="switch_4">switch 4</string>
    <string name="switch_5">switch 5</string>
    <string name="home">Home</string>
    <string name="toast_message">Menüye daha fazla öğe eklenemez.</string>
</resources>